// Copyright 2022 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package testservice;

option go_package = "github.com/openconfig/ondatra/binding/grpcutil/testservice";

service Test {
  // TestUnary is a fake unary RPC.
  rpc SendUnary(TestRequest) returns (TestResponse);
  // TestStream is a fake streaming RPC.
  rpc SendStream(stream TestRequest) returns (stream TestResponse);
}

message TestRequest {
  string message = 1;
}

message TestResponse {}
